feat: 메인 문구 및 타이핑 효과 적용

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,13 @@
   "env": {
     "browser": true,
     "node": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "parserOptions": {
+        "project": null
+      }
+    }
+  ]
 }
