fix: 링크 연결 및 섹션 내용 형식 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,43 @@
 {
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "prettier"],
+  "parserOptions": {
+    "tsconfigRootDir": "portfolio",
+    "createDefaultProgram": true
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "ignorePatterns": ["node_modules/"],
   "extends": [
     "airbnb",
     "airbnb-typescript",
-    "plugin:prettier/recommended",
+    "airbnb/hooks",
+    "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-props-no-spreading": 0,
-    "no-duplicate-imports": "warn",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error",
-    "quotes": ["warn", "single", { "avoidEscape": true }],
-    "@typescript-eslint/camelcase": "off",
-    "react/prop-types": "off",
-    "react/function-component-definition": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "dependencies": true
-      }
-    ]
-  },
-  "plugins": ["@typescript-eslint", "prettier"],
-  "env": {
-    "browser": true,
-    "node": true
-  },
   "overrides": [
     {
-      "files": ["*.js"],
-      "parserOptions": {
-        "project": null
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser",
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
+      ],
+      "plugins": ["@typescript-eslint"],
+      "rules": {
+        "react/jsx-props-no-spreading": 0,
+        "no-useless-catch": "off",
+        "no-duplicate-imports": "warn",
+        "no-unused-vars": "warn",
+        "quotes": ["warn", "single", { "avoidEscape": true }],
+        "import/extensions": "off",
+        "import/no-extraneous-dependencies": ["off"],
+        "global-require": "off"
       }
     }
   ]
