--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,44 +1,36 @@
 {
-  "root": true,
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
-  "parserOptions": {
-    "tsconfigRootDir": "portfolio",
-    "createDefaultProgram": true
-  },
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "es2021": true
   },
-  "ignorePatterns": ["node_modules/"],
   "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "airbnb/hooks",
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "prettier",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "parser": "@typescript-eslint/parser",
-      "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-      ],
-      "plugins": ["@typescript-eslint"],
-      "rules": {
-        "react/jsx-props-no-spreading": 0,
-        "no-useless-catch": "off",
-        "no-duplicate-imports": "warn",
-        "no-unused-vars": "warn",
-        "quotes": ["warn", "single", { "avoidEscape": true }],
-        "import/extensions": "off",
-        "import/no-extraneous-dependencies": ["off"],
-        "global-require": "off"
-      }
+  "overrides": [],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "spaced-comment": "warn",
+    "quotes": ["error", "single", { "avoidEscape": true }],
+    "no-duplicate-imports": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx", ".js"]
+    },
+    "import/resolver": {
+      "typescript": "./tsconfig.json"
     }
-  ]
+  }
 }
